Fix spacing

--- a/Threads/www/css/style.css
+++ b/Threads/www/css/style.css
@@ -26,3 +26,7 @@
 .item-postcontent {
     width:100%;
 }
+
+ion-content {
+    margin-bottom: 53px;
+}
